# langchain-crash-course

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  ruff.toml
1_chat_models/: 1_chat_model_basic.py  2_chat_model_basic_conversation.py  3_chat_model_alternatives.py  4_chat_model_conversation_with_user.py  5_chat_model_save_message_history_firebase.py
2_prompt_templates/: 1_prompt_template_basic.py  2_prompt_template_with_chat_model.py
3_chains/: 1_chains_basics.py  2_chains_under_the_hood.py  3_chains_extended.py  4_chains_parallel.py  5_chains_branching.py
4_rag/: 1a_rag_basics.py  1b_rag_basics.py  2a_rag_basics_metadata.py  2a_rag_basics_metadata_multi_threading.py  2b_rag_basics_metadata.py  3_rag_text_splitting_deep_dive.py  4_rag_embedding_deep_dive.py  5_rag_retriever_deep_dive.py  6_rag_one_off_question.py  7_rag_conversational.py  8_rag_web_scrape_basic.py  8_rag_web_scrape_firecrawl.py
4_rag/utils/: embedding_cost_calculator.py
5_agents_and_tools/: 1_agent_and_tools_basics.py  1_agent_and_tools_basics_structured_chat.py
5_agents_and_tools/agent_deep_dive/: 1_agent_react_chat.py  2_agent_react_docstore.py
5_agents_and_tools/tools_deep_dive/: 1_tool_constructor.py  2_tool_decorator.py  3_tool_base_tool.py
