[tool.poetry]
name = "langchain-crash-course"
version = "0.1.1"
description = "Everything you need to know to get started with LangChain"
authors = ["bhancock_ai <brandon@brandonhancock.io>", "RockyNiu <lei.niu.ny@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0, <3.12"
bs4 = "^0.0.2"
chromadb = "^0.5.7"
firecrawl-py = "^1.2.4"
firestore = "^0.0.8"
langchain = "^0.3.0"
langchain-anthropic = "^0.2.1"
langchain-community = "^0.3.0"
langchain-google-firestore = "^0.3.0"
langchain-google-genai = "^2.0.0"
langchain-openai = "^0.2.0"
langchainhub = "^0.1.21"
openai = "^1.47.0"
python-dotenv = "^1.0.1"
sentence-transformers = "^3.1.1"
tavily-python = "^0.5.0"
tiktoken = "^0.7.0"
wikipedia = "^1.4.0"
langchain-ollama = "^0.2.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.7"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 
